--- a/www/sign_up.html
+++ b/www/sign_up.html
@@ -32,8 +32,8 @@
 				<p>Your pet's health, we care</p>
 			</section>
 
-			<!-- About us -->
-				<section id="about_us" class="wrapper style1">
+			<!-- Form Sign Up -->
+				<section id="sign_up" class="wrapper style1">
 					<div class="container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
