--- a/www/login.html
+++ b/www/login.html
@@ -32,8 +32,8 @@
 				<p>Your pet's health, we care</p>
 			</section>
 
-			<!-- About us -->
-				<section id="about_us" class="wrapper style1">
+			<!-- Form Login -->
+				<section id="user_login" class="wrapper style1">
 					<div class="container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
@@ -64,6 +64,5 @@
 						</div>
 					</div>
 				</section>
-
 	</body>
 </html>
