--- a/www/contact.html
+++ b/www/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>PAS VET - SIGN UP</title>
+		<title>PAS VET - LOGIN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="main.css" />
@@ -17,10 +17,6 @@
 						<li><a href="sign_up.html">Sign Up</a></li>
 						<li><a href="profile.html" style="display: none;">Your Profile</a></li>
 						<li><a href="rdv.html" style="display: none;">Your appointment</a></li>
-						<li><a href="vet.html" style="display: none;">Vets</a></li>
-						<li><a href="med.html" style="display: none;">Medicaments</a></li>
-						<li><a href="traitement.html" style="display: none;">Treatments</a></li>
-						<li><a href="voir_rdv.html" style="display: none;">Your appointment</a></li>
 						<li><a href="statistics.html" style="display: none;">Statistics</a></li>
 					</ul>
 				</nav>
@@ -32,37 +28,29 @@
 				<p>Your pet's health, we care</p>
 			</section>
 
-			<!-- Form Sign Up -->
-				<section id="sign_up" class="wrapper style1">
+			<!-- Form Contact -->
+				<section id="contact" class="wrapper style1">
 					<div class="container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
 								<header class="major">
-									<h2>Sign Up</h2>
+									<h2>Contact Us</h2>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<form action="sign_up.php" method="post">
+								<form action="send_mail.php" method="post">
+									<div class="form">
+										<label for="first_name">First Name: </label>
+										<input type="text" name="first_name" required>
+									</div>
   									<div class="form">
-    									<label for="name">Last Name: </label>
-    									<input type="text" name="name" id="name" required>
+    									<label for="email_address">Your email: </label>
+    									<input type="email" name="email_address" id="email_address" required>
   									</div>
   									<div class="form">
-    									<label for="surname">First Name: </label>
-   				 						<input type="text" name="surname" id="surname" required>
-  									</div>
-  									<div class="form">
-    									<label for="dn">Birthday: </label>
-   				 						<input type="date" name="dn" id="dn" required>
-  									</div>
-  									<div class="form">
-    									<label for="ad">Address: </label>
-   				 						<input type="text" name="ad" id="ad" required>
-  									</div>
-  									<div class="form">
-    									<label for="phone">Telephone Number: </label>
-   				 						<input type="tel" name="phone" id="phone" pattern="[0-9]{10}" required>
-  									</div>
+    									<label for="comments">Your message: </label>
+   				 						<textarea name="comments" rows="10" cols="30" required></textarea>
+  									<br>
   									<br>
   									<div class="form">
     									<input type="submit" value="Submit">
@@ -72,6 +60,5 @@
 						</div>
 					</div>
 				</section>
-
 	</body>
 </html>
