--- a/www/home_user.html
+++ b/www/home_user.html
@@ -12,9 +12,11 @@
 			<header id="header" class="alt">
 				<nav id="nav">
 					<ul>
-						<li><a href="home.html">Home</a></li>
-						<li><a href="login.html">Login</a></li>
-						<li><a href="sign_up.html">Sign Up</a></li>
+						<li><a href="home_user.html">Home</a></li>
+						<li><a href="profile.html">Your Profile</a></li>
+						<li><a href="pet.html">Your Pet</a></li>
+						<li><a href="rdv.html">Your appointment</a></li>
+						<li><a href="statistics.html">Statistics</a></li>
 					</ul>
 				</nav>
 			</header>
