--- a/www/home_user.html
+++ b/www/home_user.html
@@ -131,7 +131,7 @@
 							<p>Any question? Any suggestion? Feel free to send us a message</p>
 						</header>
 						<ul class="actions">
-							<li><a href="contact.html" class="button special big">Get in touch</a></li>
+							<li><a href="contact_user.html" class="button special big">Get in touch</a></li>
 						</ul>
 					</div>
 				</section>
