--- a/www/login.html
+++ b/www/login.html
@@ -35,7 +35,7 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<form action="login.php" method="post">
+								<form action="login.php" method="POST">
   									<div class="form">
     									<label for="name">Last Name: </label>
     									<input type="text" name="name" id="name" required>
