--- a/www/contact_user.html
+++ b/www/contact_user.html
@@ -17,6 +17,7 @@
 						<li><a href="pet.html">Your Pet</a></li>
 						<li><a href="rdv.html">Your appointment</a></li>
 						<li><a href="statistics.html">Statistics</a></li>
+						<li><a href="logout.php">Log Out</a></li>
 					</ul>
 				</nav>
 			</header>
