--- a/www/home_user.html
+++ b/www/home_user.html
@@ -13,13 +13,15 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="home_user.html">Home</a></li>
-						<li><a href="profile.php">Your Profile</a></li> 
+						<li><a href="profile.php">Your Profile</a></li>
 						<li><a href="pet.html">Your Pet</a></li>
-						<li><a href="rdv.html">Your appointment</a></li>
+						<li><a href="rdv.php">Your appointment</a></li>
 						<li><a href="statistics.html">Statistics</a></li>
+						<li><a href="logout.php">Log Out</a></li>
 					</ul>
 				</nav>
 			</header>
+
 
 		<!-- Banner -->
 			<section id="banner">
