--- a/www/login.html
+++ b/www/login.html
@@ -50,7 +50,7 @@
   									</div>
   									<br>
   									<div class="form">
-    									<input type="submit" value="Submit">
+    									<input type="submit" value="Log In">
   									</div>
 								</form>
 							</div>
