--- a/www/contact_user.html
+++ b/www/contact_user.html
@@ -14,8 +14,8 @@
 					<ul>
 						<li><a href="home_user.html">Home</a></li>
 						<li><a href="profile.php">Your Profile</a></li>
-						<li><a href="pet.html">Your Pet</a></li>
-						<li><a href="rdv.html">Your appointment</a></li>
+						<li><a href="pet.php">Your Pet</a></li>
+						<li><a href="rdv.php">Your appointment</a></li>
 						<li><a href="statistics.html">Statistics</a></li>
 						<li><a href="logout.php">Log Out</a></li>
 					</ul>
