--- a/www/home_user.html
+++ b/www/home_user.html
@@ -16,7 +16,7 @@
 						<li><a href="profile.php">Your Profile</a></li>
 						<li><a href="pet.php">Your Pet</a></li>
 						<li><a href="rdv.php">Your appointment</a></li>
-						<li><a href="statistics.html">Statistics</a></li>
+						<li><a href="statistics.php">Statistics</a></li>
 						<li><a href="logout.php">Log Out</a></li>
 					</ul>
 				</nav>
